--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         rel="stylesheet">
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+
+    <!-- Particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <!-- Tilt.js (add before closing body) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+
+
     <style>
         :root {
             --primary: #4d8ee6;
@@ -297,7 +307,7 @@
         }
 
         .square2 {
-            z-index:-2;
+            z-index: -2;
             width: 24px;
             height: 24px;
             position: absolute;
@@ -307,7 +317,7 @@
         }
 
         .square1 {
-            z-index:-2;
+            z-index: -2;
             width: 12px;
             height: 12px;
             position: absolute;
@@ -381,6 +391,106 @@
             background: hsla(0, 0%, 100%, .05);
         }
 
+        .shapes {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+            pointer-events: none;
+        }
+
+        .shape {
+            position: absolute;
+            border-radius: 50%;
+            filter: blur(60px);
+            opacity: 0.3;
+        }
+
+        .shape-1 {
+            background: #1b1b1b;
+            width: 300px;
+            height: 300px;
+            top: 20%;
+            left: 10%;
+            animation: float 15s infinite ease-in-out;
+        }
+
+        .shape-2 {
+            background: #6c6c6d;
+            width: 400px;
+            height: 400px;
+            bottom: 10%;
+            right: 10%;
+            animation: float 20s infinite ease-in-out reverse;
+        }
+
+        .shape-3 {
+            background: #353635;
+            width: 250px;
+            height: 250px;
+            top: 50%;
+            right: 30%;
+            animation: float 18s infinite ease-in-out;
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translate(0, 0);
+            }
+
+            25% {
+                transform: translate(50px, 50px);
+            }
+
+            50% {
+                transform: translate(0, 100px);
+            }
+
+            75% {
+                transform: translate(-50px, 50px);
+            }
+        }
+
+        .particles-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+
+        .cursor {
+            position: fixed;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.8);
+            pointer-events: none;
+            mix-blend-mode: difference;
+            z-index: 9999;
+            transform: translate(-50%, -50%);
+            transition: transform 0.1s ease;
+        }
+
+        .cursor-follower {
+            position: fixed;
+            width: 40px;
+            height: 40px;
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 9998;
+            transform: translate(-50%, -50%);
+            transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
+        }
+
 
 
         /* Animation classes */
@@ -429,6 +539,11 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
+    <div class="shapes">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+    </div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3">
         <div class="container">
@@ -467,9 +582,10 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
+        <div id="particles-js" class="particles-container"></div>
         <div class="container mt-5">
 
-            <div class="row align-items-center">
+            <div class="row align-items-center" data-speed="0.3">
                 <div class="col-lg-6 hero-content slide-up">
                     <h6 class="text-uppercase" style="color: var(--primary); font-family: 'Oswald', sans-serif;">3D
                         Artist & Blender Specialist</h6>
@@ -492,7 +608,6 @@
 
     <!-- About Section -->
     <section id="about" class="rel z-1">
-
         <div class="container">
 
             <div class="row align-items-center">
@@ -1166,6 +1281,9 @@
         </div>
     </footer>
 
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -1180,19 +1298,30 @@
         });
 
         // Animation on scroll
-        function animateOnScroll() {
-            const elements = document.querySelectorAll('.slide-up, .fade-in');
+        function initScrollAnimations() {
+            gsap.registerPlugin(ScrollTrigger);
 
-            elements.forEach(element => {
-                const elementPosition = element.getBoundingClientRect().top;
-                const screenPosition = window.innerHeight / 1.2;
-
-                if (elementPosition < screenPosition) {
-                    element.style.opacity = '1';
-                    element.style.transform = 'translateY(0)';
-                }
+            // Animate sections
+            gsap.utils.toArray('section').forEach(section => {
+                gsap.from(section, {
+                    scrollTrigger: {
+                        trigger: section,
+                        start: "top 80%",
+                        toggleActions: "play none none none"
+                    },
+                    opacity: 0,
+                    y: 50,
+                    duration: 1
+                });
             });
+
+
         }
+
+        // Call this when DOM is loaded
+        document.addEventListener('DOMContentLoaded', function () {
+            initScrollAnimations();
+        });
 
         document.addEventListener('DOMContentLoaded', function () {
             const skillItems = document.querySelectorAll('.skill-item');
@@ -1239,6 +1368,79 @@
             skillItems.forEach(item => {
                 observer.observe(item);
             });
+        });
+
+        function initParticles() {
+            particlesJS('particles-js', {
+                particles: {
+                    number: { value: 80, density: { enable: true, value_area: 800 } },
+                    color: { value: "#ffffff" },
+                    shape: { type: "circle" },
+                    opacity: { value: 0.5, random: true },
+                    size: { value: 3, random: true },
+                    line_linked: {
+                        enable: true,
+                        distance: 150,
+                        color: "#ffffff",
+                        opacity: 0.4,
+                        width: 1
+                    },
+                    move: {
+                        enable: true,
+                        speed: 2,
+                        direction: "none",
+                        random: true,
+                        straight: false,
+                        out_mode: "out"
+                    }
+                },
+                interactivity: {
+                    detect_on: "canvas",
+                    events: {
+                        onhover: { enable: true, mode: "repulse" },
+                        onclick: { enable: true, mode: "push" }
+                    }
+                }
+            });
+        }
+
+        // Call this when DOM is loaded
+        document.addEventListener('DOMContentLoaded', function () {
+            initParticles();
+        });
+
+        function initCustomCursor() {
+            const cursor = document.querySelector('.cursor');
+            const cursorFollower = document.querySelector('.cursor-follower');
+
+            document.addEventListener('mousemove', (e) => {
+                cursor.style.left = e.clientX + 'px';
+                cursor.style.top = e.clientY + 'px';
+
+                setTimeout(() => {
+                    cursorFollower.style.left = e.clientX + 'px';
+                    cursorFollower.style.top = e.clientY + 'px';
+                }, 100);
+            });
+
+            document.querySelectorAll('a, button, .project-card').forEach(el => {
+                el.addEventListener('mouseenter', () => {
+                    cursor.style.transform = 'translate(-50%, -50%) scale(1.5)';
+                    cursorFollower.style.width = '20px';
+                    cursorFollower.style.height = '20px';
+                });
+
+                el.addEventListener('mouseleave', () => {
+                    cursor.style.transform = 'translate(-50%, -50%) scale(1)';
+                    cursorFollower.style.width = '40px';
+                    cursorFollower.style.height = '40px';
+                });
+            });
+        }
+
+        // Call this when DOM is loaded
+        document.addEventListener('DOMContentLoaded', function () {
+            initCustomCursor();
         });
     </script>
 </body>
