--- a/index.html
+++ b/index.html
@@ -220,7 +220,6 @@
             border-color: #ccc !important;
             color: var(--light) !important;
             box-shadow: none !important;
-
         }
 
         hr {
@@ -583,7 +582,7 @@
                 </div>
                 <div class="col-lg-6">
                     <!-- Placeholder for 3D model viewer or image -->
-                    <img src="fdccCvWAZQak.jpg" alt="3D Model Example" class="img-fluid hero-3d-model fade-in">
+                    <img src="0bLoTC1FxpOF.jpg" alt="3D Model Example" class="img-fluid hero-3d-model fade-in">
                 </div>
             </div>
         </div>
