--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container mt-5">
 
             <div class="row align-items-center" data-speed="0.3">
-                <div class="col-lg-6 hero-content slide-up">
+                <div class="col-lg-6 hero-content">
                     <h6 class="text-uppercase" style="color: var(--primary); font-family: 'Oswald', sans-serif;">3D
                         Artist & Blender Specialist</h6>
                     <h1 class="display-4 fw-bold mb-4">Bringing Products to Life with <span
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-6">
                     <!-- Placeholder for 3D model viewer or image -->
-                    <img src="assets/hero.jpg" alt="3D Model Example" class="img-fluid hero-3d-model fade-in">
+                    <img src="assets/hero.jpg" alt="3D Model Example" class="img-fluid hero-3d-model">
                 </div>
             </div>
         </div>
@@ -104,6 +104,7 @@
                     <img src="assets/author1.png" alt="About Me" class="img-fluid rounded shadow">
                     <div class="square1"></div>
                     <div class="square2"></div>
+                    
                 </div>
                 <div class="col-lg-7 ps-lg-5">
                     <h2 class="section-title">About Me</h2>
