--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
 
+
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="main.css">
 
 </head>
@@ -69,6 +72,7 @@
         </div>
     </nav>
 
+    
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div id="particles-js" class="particles-container"></div>
@@ -104,7 +108,7 @@
                     <img src="assets/author1.png" alt="About Me" class="img-fluid rounded shadow">
                     <div class="square1"></div>
                     <div class="square2"></div>
-                    
+
                 </div>
                 <div class="col-lg-7 ps-lg-5">
                     <h2 class="section-title">About Me</h2>
@@ -184,7 +188,37 @@
             <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
         </div>
     </section>
-    <div class="headline-area-h2 rel z-2 py-25"><div class="headline-wrap"><span class="marquee-wrap"><span class="marquee-inner left"><span class="marquee-item">branding<i class="far fa-asterisk"></i></span><span class="marquee-item">product design<i class="far fa-asterisk"></i></span><span class="marquee-item">digital marketing<i class="far fa-asterisk"></i></span><span class="marquee-item">product design<i class="far fa-asterisk"></i></span><span class="marquee-item">art direction<i class="far fa-asterisk"></i></span><span class="marquee-item">development<i class="far fa-asterisk"></i></span><span class="marquee-item">UI/UX Design<i class="far fa-asterisk"></i></span><span class="marquee-item">motion graphics<i class="far fa-asterisk"></i></span><span class="marquee-item">strategy<i class="far fa-asterisk"></i></span></span><span class="marquee-inner left"><span class="marquee-item">branding<i class="far fa-asterisk"></i></span><span class="marquee-item">product design<i class="far fa-asterisk"></i></span><span class="marquee-item">digital marketing<i class="far fa-asterisk"></i></span><span class="marquee-item">product design<i class="far fa-asterisk"></i></span><span class="marquee-item">art direction<i class="far fa-asterisk"></i></span><span class="marquee-item">development<i class="far fa-asterisk"></i></span><span class="marquee-item">UI/UX Design<i class="far fa-asterisk"></i></span><span class="marquee-item">motion graphics<i class="far fa-asterisk"></i></span><span class="marquee-item">strategy<i class="far fa-asterisk"></i></span></span><span class="marquee-inner left"><span class="marquee-item">branding<i class="far fa-asterisk"></i></span><span class="marquee-item">product design<i class="far fa-asterisk"></i></span><span class="marquee-item">digital marketing<i class="far fa-asterisk"></i></span><span class="marquee-item">product design<i class="far fa-asterisk"></i></span><span class="marquee-item">art direction<i class="far fa-asterisk"></i></span><span class="marquee-item">development<i class="far fa-asterisk"></i></span><span class="marquee-item">UI/UX Design<i class="far fa-asterisk"></i></span><span class="marquee-item">motion graphics<i class="far fa-asterisk"></i></span><span class="marquee-item">strategy<i class="far fa-asterisk"></i></span></span></span></div></div>
+    <div class="headline-area-h2 rel z-2 py-25">
+        <div class="headline-wrap"><span class="marquee-wrap"><span class="marquee-inner left"><span
+                        class="marquee-item">branding<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">product design<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">digital marketing<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">product design<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">art direction<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">development<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">UI/UX Design<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">motion graphics<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">strategy<i class="far fa-asterisk"></i></span></span><span
+                    class="marquee-inner left"><span class="marquee-item">branding<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">product design<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">digital marketing<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">product design<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">art direction<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">development<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">UI/UX Design<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">motion graphics<i
+                            class="far fa-asterisk"></i></span><span class="marquee-item">strategy<i
+                            class="far fa-asterisk"></i></span></span><span class="marquee-inner left"><span
+                        class="marquee-item">branding<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">product design<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">digital marketing<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">product design<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">art direction<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">development<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">UI/UX Design<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">motion graphics<i class="far fa-asterisk"></i></span><span
+                        class="marquee-item">strategy<i class="far fa-asterisk"></i></span></span></span></div>
+    </div>
 
     <!-- Services Section -->
     <section id="services" class="services-section py-5 resume-area-two">
@@ -784,6 +818,8 @@
 
     <!-- Particles.js -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <script src="https://unpkg.com/lenis@1.3.11/dist/lenis.min.js"></script> 
 
     <script src="main.js"></script>
 
