--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 my-5 mb-lg-0 rel">
                     <div class="bg-circle"></div>
-                    <img src="assets/author1.png" alt="About Me" class="img-fluid rounded shadow">
+                    <img src="assets/me.png" alt="About Me" class="img-fluid rounded shadow">
                     <div class="square1"></div>
                     <div class="square2"></div>
 
